# mcp-delegate-cli

./: .env.example  .gitignore  README.md  adapters.py  config.py  pyproject.toml  requirements.txt  server.py  utils.py
docs/plans/: 2026-03-30-delegate-history-design.md
mcp_delegate_cli/: __init__.py  __main__.py
tests/: test_adapters.py  test_config.py  test_delegate_status.py  test_packaging.py  test_server.py  test_utils.py
